# Polri-Windows-Client

./: .gitignore  CMakeLists.txt  build_windows.sh  mingw-toolchain.cmake
.github/workflows/: build-windows.yml  windows-build.yml
opus/opus-1.5.2/src/: opus_encoder.c
res/qml/: Style.qml  main.qml
res/qml/components/: InfoCard.qml  MarqueeText.qml  PttButton.qml  Sidebar.qml  SidebarItem.qml
res/qml/screens/: AboutScreen.qml  Dashboard.qml  GroupScreen.qml  LoginScreen.qml  MapsScreen.qml  SettingsScreen.qml  UserScreen.qml  VideoScreen.qml
src/: AudioHandler.cpp  AudioHandler.h  LocationManager.cpp  LocationManager.h  SettingsManager.cpp  SettingsManager.h  SoundManager.cpp  SoundManager.h  VideoRenderer.cpp  VideoRenderer.h  WebSocketManager.cpp  WebSocketManager.h  main.cpp
